fix Windows exe packaging